--- a/default-grimoirelab-settings/setup-gitee.cfg
+++ b/default-grimoirelab-settings/setup-gitee.cfg
@@ -82,7 +82,7 @@ contribs_field = hash
 raw_index = gitee_issues-raw
 enriched_index = gitee_issues-enriched
 category = issue
-api-token = 5d0e2c741deb98b0df87c062b536d1c6
+api-token = 
 sleep-for-rate = true
 no-archive = true
 studies = [enrich_onion:gitee-issue]
@@ -97,7 +97,7 @@ data_source = gitee_issues
 raw_index = gitee_pulls-raw
 enriched_index = gitee_pulls-enriched
 category = pull_request
-api-token = 5d0e2c741deb98b0df87c062b536d1c6
+api-token = 
 sleep-for-rate = true
 no-archive = true
 studies = [enrich_onion:gitee-pull]
@@ -113,14 +113,14 @@ raw_index = gitee_repo-raw
 enriched_index = gitee_repo-enriched
 category = repository
 no-archive = true
-api-token = 5d0e2c741deb98b0df87c062b536d1c6
+api-token = 
 sleep-for-rate = true
 from-date = 2021-06-01
 
 [github:issue]
 raw_index = github_raw
 enriched_index = github_enriched
-api-token = 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
+api-token = 
 category = issue
 sleep-for-rate = true
 no-archive = true
@@ -136,7 +136,7 @@ out_index_prs = github-prs-onion_enriched
 [github:pull]
 raw_index = github-pull_raw
 enriched_index = github-pull_enriched
-api-token = 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
+api-token = 
 category = pull_request
 sleep-for-rate = true
 no-archive = true
@@ -145,7 +145,7 @@ from-date = 2021-05-01
 [github:repo]
 raw_index = github-repo_raw
 enriched_index = github-repo_enriched
-api-token = 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
+api-token = 
 category = repository
 sleep-for-rate = true
 no-archive = true
