fix config to solve all-onion bug on github_prs and github_issues

--- a/default-grimoirelab-settings/setup-gitee.cfg
+++ b/default-grimoirelab-settings/setup-gitee.cfg
@@ -128,8 +128,8 @@ studies = [enrich_onion:github]
 from-date = 2021-05-01
 
 [enrich_onion:github]
-in_index_iss = github_issues_onion-src
-in_index_prs = github_prs_onion-src
+in_index_iss = github_enriched
+in_index_prs = github-pull_enriched
 out_index_iss = github-issues-onion_enriched
 out_index_prs = github-prs-onion_enriched
 
