--- a/default-grimoirelab-settings/setup-gitee.cfg
+++ b/default-grimoirelab-settings/setup-gitee.cfg
@@ -12,7 +12,7 @@ aliases_file = ./aliases.json
 #projects_file = ./projects-gitee-yehui-all-hw.json
 #projects_file = ./projects-gitee-yehui-pure-paddle.json
 #projects_file = ./projects-gitee-yehui-pure-openGauss.json
-projects_file = ./projects-gitee-yehui-pure-minsporetmp.json
+projects_file = ./projects-gitee-yehui-pure-minspore.json
 #projects_file = ./projects-gitee-yehui-pure-openeuler-iSulad.json
 #projects_file = ./projects-gitee-yehui-pure-openeuler-A-Tune.json
 #projects_file = ./projects-gitee-yehui-pure-openeuler-stratovirt.json
@@ -53,10 +53,10 @@ community = true
 github-repos = true
 
 [phases]
-collection = false
-identities = true
-enrichment = true
-panels = true
+collection = true
+identities = false
+enrichment = false
+panels = false
 
 [git]
 raw_index = git_demo_raw
