Add organization information
Signed-off-by: lishengbao <lishengbao147@gmail.com>

--- a/default-grimoirelab-settings/identities.yml
+++ b/default-grimoirelab-settings/identities.yml
@@ -37,3 +37,10 @@
     - owl_capone@bitergia.com
   github:
     - owl_capone
+
+- profile:
+    name: i-robot
+  enrollments:
+    - organization: Huawei
+  email:
+    - huawei_ci_bot@163.com
